调整项目结构

--- a/snowflake/pom.xml
+++ b/snowflake/pom.xml
@@ -8,13 +8,13 @@
         <version>2.3.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>tech.wedev</groupId>
+    <groupId>tech.wedev.util</groupId>
     <artifactId>snowflake</artifactId>
     <version>0.0.1.RELEASE</version>
     <packaging>jar</packaging>
-    <name>snowflake</name>
+    <name>snowFlakeDemo</name>
     <url>http://maven.apache.org</url>
-    <description>SnowFlakeDemo</description>
+    <description>snowFlakeDemo</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,19 +28,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <distributionManagement>
         <repository>
             <id>github</id>
             <name>GitHub CATBOSHI Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/catboshi/snowflakeDemo</url>
+            <url>https://maven.pkg.github.com/catboshi/utilDemo</url>
         </repository>
     </distributionManagement>
 
