--- a/snowflake/pom.xml
+++ b/snowflake/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
     <name>snowFlakeDemo</name>
     <url>http://maven.apache.org</url>
-    <description>snowFlakeDemo</description>
+    <description>snowflake雪花算法工具类</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
